prevent overflow of stuff on mobile

--- a/src/styl/layout.styl
+++ b/src/styl/layout.styl
@@ -5,7 +5,7 @@ $chart-area-padding = 20px
 // Page layout setup
 
 html, body
-	min-width 290px
+	min-width 200px
 	color $color-body-text
 	max-width 100%
 	overflow-x none
@@ -130,6 +130,7 @@ canvas
 	overflow-y scroll
 	overflow-x hidden
 	height 100%
+	max-width 100%
 	position fixed
 	margin-top $chart-area-padding
 	.desktop
